--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 </head>
 
 <body>
-
+<header>
   <nav>
-
     <div id='logoDiv'>
       <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
     </div>
-    <a href="">HOME</a>
-    <a href="indexAbout.html">ABOUT</a>
-    <a href="">NEWSLETTER</a>
+    <div class="navDiv">
+      <a href="index.html">HOME</a>
+      <a href="indexAbout.html">ABOUT</a>
+      <a href="">NEWSLETTER</a>
+    </div>
   </nav>
+  </header>
 
   <section class="homeMain">
     <h1>Bent Creek Ceramics</h1>
@@ -31,37 +33,37 @@
     <section class="imgWrap">
 
       <div class="img1">
-        <img src="images/optimized/product-1.jpg" alt="NOT AVAILABLE">
+        <!-- <img src="images/optimized/product-1.jpg" alt="NOT AVAILABLE"> -->
         <h3>Endless Possibilities</h3>
       </div>
 
       <div class="img2">
-        <img src="images/optimized/product-2.jpg" alt="NOT AVAILABLE">
+        <!-- <img src="images/optimized/product-2.jpg" alt="NOT AVAILABLE"> -->
         <h3>Sets</h3>
       </div>
 
       <div class="img3">
-        <img src="images/optimized/product-3.jpg" alt="NOT AVAILABLE">
+        <!-- <img src="images/optimized/product-3.jpg" alt="NOT AVAILABLE"> -->
         <h3>Textures</h3>
       </div>
 
       <div class="img4">
-        <img src="images/optimized/product-4.jpg" alt="NOT AVAILABLE">
+        <!-- <img src="images/optimized/product-4.jpg" alt="NOT AVAILABLE"> -->
         <h3>Tea Time</h3>
       </div>
 
       <div class="img5">
-        <img src="images/optimized/product-5.jpg" alt="NOT AVAILABLE">
+        <!-- <img src="images/optimized/product-5.jpg" alt="NOT AVAILABLE"> -->
         <h3>Jars and Containers</h3>
       </div>
 
       <div class="img6">
-        <img src="images/optimized/product-6.jpg" alt="NOT AVAILABLE">
+        <!-- <img src="images/optimized/product-6.jpg" alt="NOT AVAILABLE"> -->
         <h3>Wasabi and Saki</h3>
       </div>
 
       <div class="img7">
-        <img src="images/optimized/product-7.jpg" alt="NOT AVAILABLE">
+        <!-- <img src="images/optimized/product-7.jpg" alt="NOT AVAILABLE"> -->
         <h3>Sippin' on Sunshine</h3>
       </div>
 
