--- a/indexNewsletter.html
+++ b/indexNewsletter.html
@@ -9,13 +9,14 @@
     <title>Newsletter</title>
   </head>
   <body>
-
     <nav>
-      <img src="images/optimized/bent-creek-logo.png" alt="NOT AVAILABLE">
-      <a href="">HOME</a>
-      <a href="indexAbout.html">ABOUT</a>
-      <a href="">NEWSLETTER</a>
-    </nav>
+    <div id='logoDiv'>
+      <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
+    </div>
+    <a href="">HOME</a>
+    <a href="indexAbout.html">ABOUT</a>
+    <a href="">NEWSLETTER</a>
+  </nav>
 
     <section class="newsLetter">
 
