--- a/indexAbout.html
+++ b/indexAbout.html
@@ -12,13 +12,14 @@
 
 <body>
 
-
-  <nav>
-    <img src="images/optimized/bent-creek-logo.png" alt="NOT AVAILABLE">
-    <a href="">HOME</a>
-    <a href="indexAbout.html">ABOUT</a>
-    <a href="">NEWSLETTER</a>
-  </nav>
+<nav>
+  <div id='logoDiv'>
+    <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
+  </div>
+  <a href="">HOME</a>
+  <a href="indexAbout.html">ABOUT</a>
+  <a href="">NEWSLETTER</a>
+</nav>
 
   <section class="mainAbout">
 
