--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div class="navDiv">
       <a href="index.html">HOME</a>
       <a href="indexAbout.html">ABOUT</a>
-      <a href="">NEWSLETTER</a>
+      <a href="indexNewsletter.html">NEWSLETTER</a>
     </div>
   </nav>
   </header>
 
-  <section class="homeMain">
+  <section id="homeMain">
     <h1>Bent Creek Ceramics</h1>
     <h2>Where art meets nature</h2>
 
@@ -32,39 +32,39 @@
 
     <section class="imgWrap">
 
-      <div class="img1">
+      <div  class="prod-pic" id="img1">
         <!-- <img src="images/optimized/product-1.jpg" alt="NOT AVAILABLE"> -->
-        <h3>Endless Possibilities</h3>
+        <h3 class="homePicTxt" id="txt1">Endless Possibilities</h3>
       </div>
 
-      <div class="img2">
+      <div class="prod-pic" id="img2">
         <!-- <img src="images/optimized/product-2.jpg" alt="NOT AVAILABLE"> -->
-        <h3>Sets</h3>
+        <h3 class="homePicTxt" id="txt2">Sets</h3>
       </div>
 
-      <div class="img3">
+      <div class="prod-pic" id="img3">
         <!-- <img src="images/optimized/product-3.jpg" alt="NOT AVAILABLE"> -->
-        <h3>Textures</h3>
+        <h3 class="homePicTxt" id="txt3">Textures</h3>
       </div>
 
-      <div class="img4">
+      <div class="prod-pic" id="img4">
         <!-- <img src="images/optimized/product-4.jpg" alt="NOT AVAILABLE"> -->
-        <h3>Tea Time</h3>
+        <h3 class="homePicTxt" id="txt4">Tea Time</h3>
       </div>
 
-      <div class="img5">
+      <div class="prod-pic" id="img5">
         <!-- <img src="images/optimized/product-5.jpg" alt="NOT AVAILABLE"> -->
-        <h3>Jars and Containers</h3>
+        <h3 class="homePicTxt" id="txt5">Jars and Containers</h3>
       </div>
 
-      <div class="img6">
+      <div class="prod-pic" id="img6">
         <!-- <img src="images/optimized/product-6.jpg" alt="NOT AVAILABLE"> -->
-        <h3>Wasabi and Saki</h3>
+        <h3 class="homePicTxt" id="txt6">Wasabi and Saki</h3>
       </div>
 
-      <div class="img7">
+      <div class="prod-pic" id="img7">
         <!-- <img src="images/optimized/product-7.jpg" alt="NOT AVAILABLE"> -->
-        <h3>Sippin' on Sunshine</h3>
+        <h3 class="homePicTxt" id="txt7">Sippin' on Sunshine</h3>
       </div>
 
 
@@ -72,7 +72,13 @@
     </section>
   </section>
 
-  Copyright 2017, Bent Creek Ceramics
+
+
+  <div class="footerHome">
+    <footer id= "footer">
+      <p>Copyright 2017, Bent Creek Ceramics</p>
+    </footer>
+  </div>
 
 </body>
 
