--- a/indexAbout.html
+++ b/indexAbout.html
@@ -12,14 +12,17 @@
 
 <body>
 
-<nav>
-  <div id='logoDiv'>
-    <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
-  </div>
-  <a href="">HOME</a>
-  <a href="indexAbout.html">ABOUT</a>
-  <a href="">NEWSLETTER</a>
-</nav>
+  <nav>
+    <div id='logoDiv'>
+      <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
+    </div>
+    <div class="navDiv">
+      <a href="index.html">HOME</a>
+      <a href="indexAbout.html">ABOUT</a>
+      <a href="indexNewsletter.html">NEWSLETTER</a>
+    </div>
+  </nav>
+  </header>
 
   <section class="mainAbout">
 
@@ -131,9 +134,13 @@
       </tbody>
     </table>
   </section>
-  < <footer>Copyright 2017, Bent Creek Ceramics</footer>
 
 
+    <div class="footerHome">
+      <footer id= "footer">
+        <p>Copyright 2017, Bent Creek Ceramics</p>
+      </footer>
+    </div>
 
     </div>
 
