--- a/indexNewsletter.html
+++ b/indexNewsletter.html
@@ -10,13 +10,16 @@
   </head>
   <body>
     <nav>
-    <div id='logoDiv'>
-      <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
-    </div>
-    <a href="">HOME</a>
-    <a href="indexAbout.html">ABOUT</a>
-    <a href="">NEWSLETTER</a>
-  </nav>
+      <div id='logoDiv'>
+        <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
+      </div>
+      <div class="navDiv">
+        <a href="index.html">HOME</a>
+        <a href="indexAbout.html">ABOUT</a>
+        <a href="indexNewsletter.html">NEWSLETTER</a>
+      </div>
+    </nav>
+    </header>
 
     <section class="newsLetter">
 
