--- a/indexAbout.html
+++ b/indexAbout.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About</title>
+  <title>Bent Creek Ceramics - About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" href="/css/master.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
@@ -12,17 +12,18 @@
 
 <body>
 
-  <nav>
-    <div id='logoDiv'>
-      <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
-    </div>
-    <div class="navDiv">
-      <a href="index.html">HOME</a>
-      <a href="indexAbout.html">ABOUT</a>
-      <a href="indexNewsletter.html">NEWSLETTER</a>
-    </div>
-  </nav>
-  </header>
+  <header>
+    <nav>
+      <div id='logoDiv'>
+        <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
+      </div>
+      <div class="navDiv">
+        <a href="index.html">HOME</a>
+        <a href="indexAbout.html">ABOUT</a>
+        <a href="indexNewsletter.html">NEWSLETTER</a>
+      </div>
+    </nav>
+    </header>
 
   <section class="mainAbout">
 
@@ -30,7 +31,7 @@
     <div class="firstPara">
 
 
-      <h1>A Community of Artists</h1>
+      <h1 id="aca">A Community of Artists</h1>
 
 
 
@@ -38,7 +39,8 @@
 
       <div>
         <img src="images/optimized/birdhouse.jpg" class="birdhouse" alt="NOT AVAILABLE">
-      </div>
+      </div >
+
 
 
       <p>Our studio, established in 1989, has been providing local artists with a <a href="#"> dedicated evironment </a> for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -94,8 +96,12 @@
         <div class="shelfInfo">
           <img src="images/optimized/background-1.jpg" class="shelfImg" alt="NOT AVAILABLE">
           <p class="shelfTxt">Every member has access to shelf space and all of the studio's shared equipment.</p>
-        </div>
+        </div  >
 
+
+
+    <section class="aboutFascilities">
+      <div>
 
       <h3>Facilities</h3>
 
@@ -103,7 +109,7 @@
         ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
 
         </div>
-
+  </section>
 
     </div>
 
@@ -116,7 +122,7 @@
         <th>Access</th>
       </thead>
       <tbody>
-        <tr>
+        <tr class="color">
           <td>Desk Only</td>
           <td>$50/mo.</td>
           <td>Buisness Hours + Weekly Kiln Access</td>
@@ -126,7 +132,7 @@
           <td>$100/mo.</td>
           <td>Buisness Hours + Weekly Kiln Access</td>
         </tr>
-        <tr>
+        <tr class="color">
           <td>Unilimited</td>
           <td>$150/mo.</td>
           <td>Unlimited Access</td>
