--- a/indexNewsletter.html
+++ b/indexNewsletter.html
@@ -6,45 +6,60 @@
     <link rel="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" href="/css/master.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Newsletter</title>
+    <title>Bent Creek Ceramics - Newsletter</title>
   </head>
-  <body>
-    <nav>
-      <div id='logoDiv'>
-        <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
-      </div>
-      <div class="navDiv">
-        <a href="index.html">HOME</a>
-        <a href="indexAbout.html">ABOUT</a>
-        <a href="indexNewsletter.html">NEWSLETTER</a>
-      </div>
-    </nav>
-    </header>
+  <body id="newsBody">
+    <header>
+      <nav>
+        <div id='logoDiv'>
+          <img src="images/optimized/bent-creek-logo.png" id="logo" alt="NOT AVAILABLE">
+        </div>
+        <div class="navDiv">
+          <a href="index.html">HOME</a>
+          <a href="indexAbout.html">ABOUT</a>
+          <a href="indexNewsletter.html">NEWSLETTER</a>
+        </div>
+      </nav>
+      </header>
 
     <section class="newsLetter">
 
 
       <div class="formMain">
         <form class="" action="index.html" method="post">
+
+
+        <div class="signUp">
           <h1>Sign Up for Our Weekly Newsletter</h1>
+        </div>
 
-          <h2>Stay up to date with events, activities, news and specials.</h2>
+
+          <div class="stayUp">
+            <h2>Stay up to date with events, activities, news and specials.</h2>
+          </div>
 
 
-            <input type="Name" name="Name" value="Name" class="nameInput">
+            <div class="inputDiv">
+              <input type="Name" name="Name" value="Name" class="nameInput">
 
-            <input type="Email" name="Email" value="Email" class="emailInput">
+              <input type="Email" name="Email" value="Email" class="emailInput">
 
-            <button type="Submit" name="Submit">Submit</button>
-
+              <button type="Submit" name="Submit">Submit</button>
+            </div>
 
 
 
         </form>
 
       </div>
-      Copyright 2017, Bent Creek Ceramics
+
     </section>
+
+    <div class="footerHome">
+      <footer id= "footer">
+        <p>Copyright 2017, Bent Creek Ceramics</p>
+      </footer>
+    </div>
 
   </body>
 </html>
