--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HOME</title>
+  <title>Bent Creek Ceramics</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" href="/css/master.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
@@ -25,8 +25,16 @@
   </header>
 
   <section id="homeMain">
-    <h1>Bent Creek Ceramics</h1>
-    <h2>Where art meets nature</h2>
+
+
+    <div id="homeHeading">
+      <h1>Bent Creek Ceramics</h1>
+    </div>
+
+    <div id="homeSubHeading">
+        <h2>Where art meets nature</h2>
+    </div>
+
 
 
 
